--- a/index.html
+++ b/index.html
@@ -96,20 +96,17 @@
 <!-- use main and header (max-w-6xl) -->
 
 <body class="max-w-7xl mx-auto font-primary">
-    <header class=" ">
-        <nav class="max-w-7xl mx-auto border border-primary lg:border-0 bg-header-bg ">
+    <header class="bg-header-bg  ">
+        <nav class="max-w-6xl mx-auto border border-primary lg:border-0 ">
             <div class="navbar max-w-6xl mx-auto  ">
                 <div class="navbar-start">
-                    <a href="" class="flex gap-1 items-center"><img src="./images/logo-header.png" alt=""
-                            class="h-12 w-12 lg:h-8 lg:w-8  ">
-                        <h3 class="font-semibold text-2xl  items-center mt-1 hidden md:flex">Browse<span
-                                class="text-primary">4</span>Pets</h3>
+                    <a href="" class="flex gap-1 items-center"><img src="./images/logo-header.png" alt="" class="h-10">
                     </a>
                 </div>
                 <div class="navbar-center hidden lg:flex">
                     <ul class="flex gap-8">
-                        <li><a href="" class="hover:underline">Find a pet</a></li>
-                        <li><a href="" class="hover:underline">Breeds</a></li>
+                        <li><a href="" class="hover:underline">Products</a></li>
+                        <li><a href="" class="hover:underline">Services</a></li>
                         <li><a href="" class="hover:underline">Contact Us</a></li>
                     </ul>
                 </div>
@@ -142,11 +139,9 @@
                     <button class="border-0 bg-primary py-2 px-3 rounded-xl hidden lg:inline mx-1">Registar</button>
 
                 </div>
+
             </div>
         </nav>
-
-    </header>
-    <main class="max-w-6xl mx-auto mt-3">
         <div class=" h-8  relative lg:mx-0 flex justify-center  rounded-3xl ">
             <div class="max-w-md ">
                 <span
@@ -158,22 +153,28 @@
         <!-- hero section  -->
         <section class="my-28 md:mt-12">
             <!-- hero section content  -->
-            <div class="relative bg-primary-bg rounded-md ">
+            <div class="relative rounded-md ">
                 <!-- text-content  -->
                 <div class="flex flex-col items-center my-6">
-                    <h1 class="secondary-font max-w-md text-2xl md:text-4xl text-center">Pamper Your Pet, Because They Deserve the
+                    <h1 class="secondary-font max-w-md text-2xl md:text-4xl text-center">Pamper Your Pet, Because They
+                        Deserve the
                         Bes</h1>
                     <p class="max-w-sm lg:max-w-lg text-gray-500 my-3 text-center">
-                        Your furry friend deserves nothing but the best! From nutritious pet food to stylish outfits and cozy pet furniture, we have everything to keep them happy and comfortable.
+                        Your furry friend deserves nothing but the best! From nutritious pet food to stylish outfits and
+                        cozy pet furniture, we have everything to keep them happy and comfortable.
                     </p>
                     <button class="text-xl border-0 rounded-xl bg-primary py-2 px-3 my-3">Find a pet </button>
                 </div>
                 <!-- image content -->
-                <div class="mx-2 flex justify-center">
+                <div class="flex justify-center">
                     <img src="./images/hero-vegetables.png" alt="" class="w-ful h-full">
                 </div>
             </div>
         </section>
+
+    </header>
+    <main class="max-w-6xl mx-auto mt-3">
+
         <!-- Browse by catagory  -->
         <section class="my-28">
             <h3 class="secondary-font text-2xl mx-2 my-6 lg:mx0">Browse By Categories</h3>
@@ -447,7 +448,7 @@
             </div>
         </section>
         <!-- meet our section  -->
-        <section class="bg-primary-bg mx-2 my-28 rounded-lg px-2">
+        <section class="bg-primary-bg mx-2 my-28 mb-72 rounded-lg px-2">
             <h3 class="secondary-font text-3xl mx-2 my-1 lg:pt-4 lg:mx-0">They Trusted US</h3>
             <!-- content parent -->
             <div class="grid lg:grid-cols-2 gap-3 py-10">
@@ -506,11 +507,12 @@
             </div>
         </section>
         <!-- get pawsome news -->
-        <section class="my-28 sticky z-10 mx-4 lg:mx-0 ">
+        <section class="my-28 sticky z-10 mx-4 lg:mx-0  ">
             <!-- section content  -->
-            <div class="grid grid-cols-1 md:grid-cols-2 bg-header-bg rounded-lg  ">
+            <div class="grid -mt-10 grid-cols-1 md:grid-cols-2 bg-header-bg rounded-lg  ">
                 <!-- image content  -->
-                <div class="mx-auto my-3 md:mx-0 md:pl-20"><img src="./images/vegetable-busket.png" alt="" class=""></div>
+                <div class="mx-auto my-3 md:mx-0 md:pl-20"><img src="./images/vegetable-busket.png" alt="" class="">
+                </div>
                 <!-- text content -->
                 <div class="md:flex flex-col justify-center items-start">
                     <h3 class="secondary-font text-3xl text-center mx-auto md:mx-0 ">Get Pawsome News!</h3>
